# company_success_prediction

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/funding_data/: startup-ch_funding.csv
data/processed/summary_stats/: top_50_current_diff.csv  top_50_current_responsibility.csv  top_50_founding_diff.csv  top_50_founding_responsibility.csv
data/raw/funding_data/: startup-ch_funding.csv
data/raw/synthetic_examples/: synthetic_corporate_responsibility.xlsx
docs/: mkdocs.yml
docs/docs/: index.md
models/experiment_A/: best_features.pkl  best_hyperparameters.pkl  cv_metrics_report.csv
models/experiment_B/: performance_reports.csv
models/experiment_B/Green - Year + Industry + Canton FEs/: report_auc_scores.csv  report_regression_results.csv
models/experiment_B/Green - Year + Industry FEs/: report_auc_scores.csv  report_regression_results.csv
models/experiment_B/Green - Year FEs/: report_auc_scores.csv  report_regression_results.csv
models/experiment_B/No FEs/: report_auc_scores.csv  (+1 more)
models/experiment_C/: average_significance_report.csv  individual_significance_report.csv
notebooks/: prepare_funding_data.ipynb  summary_statistics.ipynb  test_notebook.ipynb
reports/figures/: charts.pptx
src/: dataset.py  embeddings.ipynb  features.py  plots.py  scrape_company_urls.py  scrape_company_websites.py  shab_message_notebook.ipynb
src/modeling/: train.py
src/scraper/: __init__.py  serp_api.py  website_scraper.py
src/zefix_processing/: country_mapping.py  gender_mapping.py
success_prediction/: __init__.py  calculate_differentiation_scores.py  embeddings.ipynb  experiment_a.py  experiment_b.py  experiment_c.py  prepare_funding_data.ipynb  rag_pipeline.ipynb  run_all_experiments.sh  run_create_embedding_scores.sh  scrape_aramis.py  scrape_company_urls.py  scrape_company_websites.py  scrape_swissreg.py  shab_message_notebook.ipynb  store_contextual_embeddings.py  store_dimension_embeddings.py  store_doc2vec_embeddings.py  store_embeddings.py  zefix_feature_engineering.ipynb
success_prediction/modeling/: predict.py  train.py
success_prediction/modelling/: config.py  logreg.ipynb  logreg_config.py  regression_analysis.py  rf_config.py  trainer.py  xgb_config.py
success_prediction/rag_components/: cleanup.py  config.py  embeddings.py
success_prediction/scraper/: __init__.py  crawler_config.py  serp_api.py  swissreg_api.py  website_crawler.py  website_scraper.py
success_prediction/shab_history_extraction/: pdf_extraction_test.ipynb
success_prediction/utils/: helper_functions.py
success_prediction/vector_db/: utils.py
success_prediction/zefix_processing/: clustering.py  country_mapping.py  gender_mapping.py
text_based_company_success_prediction/: __init__.py
text_based_company_success_prediction/modeling/: predict.py
text_based_company_success_prediction/scraper/: google_api.py
(+246 files in other folders)
