[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "company_success_prediction"
version = "0.0.1"
description = "This project explores the usefulness of company website data to evaluate early startup success when only limited financial data is available."
authors = [
  { name = "Manuel Bolz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["success_prediction"]
force_sort_within_sections = true

[tool.pocketknife]
env_file = "environment.toml"
database = "zefix"